# chara

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  default.nix  flake.nix  package.json  pnpm-lock.yaml  rust-analyzer.toml  tailwind.config.js
.github/workflows/: deploy.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: mod.rs
app/src/components/demos/: demo_breadcrumb.rs  demo_button_href.rs  demo_dialog.rs  demo_dropdown_menu.rs  demo_dropdown_menu_user_icon.rs  demo_empty.rs  demo_field.rs  demo_sheet.rs  demo_sonner.rs  mod.rs
app/src/components/hooks/: mod.rs  use_theme_mode.rs
app/src/components/sidenav/: mod.rs
app/src/components/ui/: breadcrumb.rs  button.rs  callout.rs  dialog.rs  dropdown_menu.rs  empty.rs  input.rs  mod.rs  separator.rs  sheet.rs  sonner.rs  theme_toggle.rs
app/src/pages/: dashboard.rs  main.rs  mod.rs
app/src/pages/base/: components.rs  componentss.rs  mod.rs  server.rs
app/src/pages/dashboard/: components.rs  mod.rs
app/src/utils/: mod.rs
core/: Cargo.toml
core/SQL/: main.surql  old.surql
core/examples/: service_bench.rs  service_test.rs
core/src/: lib.rs
core/src/db/: mod.rs
core/src/db/error/: mod.rs
core/src/models/: api_token.rs  base.rs  identity.rs  ids.rs  mod.rs  permissions.rs  session.rs  table.rs  user.rs
core/src/models/field/: kinds.rs  migration.rs  mod.rs
core/src/models/record/: cell.rs  mod.rs
core/src/service/: mod.rs
core/src/service/api/: mod.rs
core/src/service/base/: mod.rs
core/src/service/crypter/: mod.rs
core/src/service/errors/: mod.rs
core/src/service/table/: mod.rs
core/src/service/user/: mod.rs
frontend/: Cargo.toml
isocurrency/src/: lib.rs
old/models/: record.rs
server/: Cargo.toml
server/src/: api.rs  main.rs  oauth.rs
sql/: cleaned.surql  main.surql
src/: lib.rs  main.rs
src/app/: mod.rs
src/core/: mod.rs
src/core/db/: mod.rs
src/core/models/: base.rs  field.rs  identity.rs  ids.rs  indentity.rs  marcos.rs  mod.rs  permissions.rs  row.rs  session.rs  table.rs  user.rs  workspace.rs
src/core/models/field/: kinds.rs  migration.rs  mod.rs
src/core/models/record/: cell.rs  mod.rs
src/core/models/workspace_user/: how_to_write_perms.md  mod.rs  perm_methods.rs  permissions.rs
src/core/service/: mod.rs  todo.md
src/core/service/base/: mod.rs
src/core/service/crypter/: mod.rs
src/core/service/table/: mod.rs
src/core/service/user/: mod.rs
src/core/service/workspace/: mod.rs
src/models/: README.md  base.rs  cell.rs  field.rs  how_tf_should_i_do_permissions.md  identity.rs  ids.rs  macros.rs  mod.rs  permissions.rs  record.rs  relation.rs  session.rs  table.rs  todo.md  user.rs  workspace.rs  workspace_users.rs  workspaces_and_its_list_of_users.md
src/models/sql/: base.surql  cell.surql  field.surql  identity.surql  record.surql  relation.surql  session.surql  table.surql  user.surql  workspace.surql  workspace_users.surql
src/models/tests/: field.rs
src/services/: TODO.md  error.rs  mod.rs
src/services/base/: mod.rs
src/services/cell/: mod.rs
src/services/field/: mod.rs
src/services/identity/: mod.rs
src/services/record/: mod.rs
src/services/relation/: mod.rs
src/services/session/: mod.rs
src/services/table/: mod.rs
src/services/user/: mod.rs
src/services/workspace/: mod.rs
src/services/workspace_users/: mod.rs
src/test/: mod.rs
style/: tailwind.css
