[package]
name = "chara"
version = "0.0.1"
edition = "2024"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bitmask = "0.5.0"
chrono = "0.4.44"
iso_currency = { path = "./isocurrency/", features=["with-serde"] }
phonenumber = "0.3.9"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
surrealdb = "3.0.4"
thiserror = "2.0.18"
validator = "0.20.0"
ordered-float = { version = "5.1.0", features = ["serde"] }
email_address = "0.2.9"
uuid = { version = "1.22.0", features = ["v4"] }
mime = "0.3.17"
mime_serde_shim = "0.2.2"
hackclub_auth_api = "0.1.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio = "1.50.0"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
leptos_axum = { version = "0.8.8", features = ["wasm"] }
leptos = { version = "0.8.17", features = ["ssr"] }
wasm-bindgen = "0.2.114"
leptos_router = "0.8.12"

[lib]
crate-type = ["cdylib", "rlib"]


