[workspace]
resolver = "2"
members = ["app", "frontend", "server", "core"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.8.2" }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
leptos_axum = { version = "0.8.2" }
leptos-use = "0.18.3"
axum = "0.8.8"
cfg-if = "1.0.4"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
http = "1.4.0"
log = "0.4.27"
simple_logger = "5.2.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
wasm-bindgen = "0.2.106"
surrealdb = { version = "3.0.4", features = ["kv-mem"]}
chacha20poly1305 = "0.10.1"
serde_json = "1.0.149"
chrono = "0.4.44"
serde = "1.0.228"
bitmask = "0.5.0"
validator = "0.20.0"
ordered-float = { version = "5.1.0", features = ["serde"] }
mime = "0.3.17"
mime_serde_shim = "0.2.2"
uuid = { version = "1.22.0", features = ["v4"] }
phonenumber = "0.3.9"
iso_currency = { version = "0.5.3", features = ["with-serde"] }
hackclub_auth_api = "0.1.2"
hex = "0.4.3"
dotenvy = "0.15.7"
tw_merge = { version = "0.1.20", features = ["variant"] }
icons = { version = "0.18.0", features = ["leptos"] }
leptos_ui = "0.3.21"
# See https://github.com/leptos-rs/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "chara"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The tailwind input file.
tailwind-input-file = "style/tailwind.css"

# [Optional] The tailwind config file.
tailwind-config-file = "tailwind.config.js"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
