[package]
name = "charac"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need surrealdb for the types and macros in models, even on the frontend.
# We use default-features = false to avoid pulling in the heavy engines (like kv-mem) by default.
surrealdb = { version = "3.0.4", default-features = false }
tokio = { workspace = true, optional = true }
thiserror.workspace = true
chacha20poly1305 = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true
bitmask.workspace = true
ordered-float = { workspace = true, features = ["serde"] }
mime.workspace = true 
mime_serde_shim.workspace = true
uuid.workspace = true
validator.workspace = true
iso_currency.workspace = true 
phonenumber.workspace = true
hackclub_auth_api = { workspace = true, optional = true }
hex.workspace = true
rand = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
base64.workspace = true

[features]
default = ["ssr"]
ssr = ["surrealdb/kv-mem", "surrealdb/protocol-ws", "dep:tokio", "dep:chacha20poly1305", "dep:axum", "dep:hackclub_auth_api", "dep:rand", "dep:dotenvy"]
